vlib/v/checker/tests/for_in_range_narrow_type_overflow_err.vv
fn main() {
	for b in min_u8 .. int(max_u8) + 1 {
		println(b)
	}
}
